Alignment fix attempt 1

--- a/app/style.css
+++ b/app/style.css
@@ -8,10 +8,11 @@
 html {
     background-color: black;
     text-align: center;
+    height: 100%;
 }
 
 body {
-    height: 100vh;
+    min-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,7 +74,7 @@ body::before {
 }
 
 .choices {
-    height: 130px;
+    height: 140px;
     display: flex;
     justify-content: center;
     gap: 1%;
@@ -98,6 +99,7 @@ img:hover {
     font-size: 1.9rem;
     font-size: clamp(1.9rem, 1.221705426356589rem + 0.18087855297157623vw, 4rem);
     font-weight: 200;
+    height: 80px;
 }
 
 /* Initial prompt and game updates */
@@ -265,7 +267,7 @@ img:hover {
         margin-bottom: 0;
         max-width: 550px;
         max-height: 650px;
-        gap: 10px;
+        gap: 40px;
     }
 
     .title {
@@ -285,10 +287,9 @@ img:hover {
     }
 
     .footer {
-        position: initial;
+        position: fixed;
         /* Changed from relative to fixed */
-        bottom: initial;
-        /* Stick to the bottom */
+
     }
 
 
